# LocalRAG_Studio

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.devcontainer.yml  docker-compose.yml  migrate.bat  migrate.sh  package.json  pnpm-lock.yaml  run.bat  run.sh  setup.bat  setup.sh
.devcontainer/: devcontainer.json
TestDocuments/: 01_aurora_lab_overview.txt  02_sensor_calibration.md  03_maintenance_schedule.json  04_incident_log_excerpt.txt  05_glossary.md  SUGGESTED_QUESTIONS.md  afl_corpus_001.md  afl_corpus_002.md  afl_corpus_003.md  afl_corpus_004.md  afl_corpus_005.md  afl_corpus_006.md  afl_corpus_007.md  afl_corpus_008.md  afl_corpus_009.md  afl_corpus_010.md  afl_corpus_011.md  afl_corpus_012.md  afl_corpus_013.md  afl_corpus_014.md  afl_corpus_015.md  afl_corpus_016.md  afl_corpus_017.md  afl_corpus_018.md  afl_corpus_019.md  afl_corpus_020.md  afl_corpus_021.md  afl_corpus_022.md  (+78 more)
rag-service/: README.md  pyproject.toml
rag-service/rag_service/: __init__.py  contracts.py  main.py
rag-service/rag_service/api/: routes.py
rag-service/rag_service/db/: __init__.py  pool.py  repositories.py
rag-service/rag_service/domain/: __init__.py  chunking.py  citations.py  hash.py
rag-service/rag_service/llm/: __init__.py  embeddings.py  ollama.py  openai_compatible.py  retry.py
rag-service/rag_service/parsers/: __init__.py  registry.py
rag-service/rag_service/services/: __init__.py  answer.py  ingest.py
rag-service/tests/: test_answer_citation_retry.py  test_answer_retrieval_rerank.py  test_api_health.py  test_chunking.py  test_citations.py
(+33 files in other folders)
