[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-service"
version = "0.1.0"
description = "Local RAG HTTP API for LocalRAG Studio"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "psycopg[binary,pool]>=3.2.0",
  "httpx>=0.27.0",
  "pydantic>=2.0",
  "pypdf>=5.0.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27.0"]

[tool.hatch.build.targets.wheel]
packages = ["rag_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
